Correciones en controladores, metodos, etc